--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
   width: 30%;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .heading-container {
     font-size: 1.5rem;
   }
